# owomatic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
data/: config.example.json  prompt-inspector.example.json  snaketalk.example.json
src/cogs/: fun.py  general.py  notes.py  notes_wip.py  owner.py  owo.py  prompt_inspector.py
src/cogs/data/: owo.json
src/cogs/imagen/: __init__.py  imagen.py  settings.py  ui.py
src/cogs/misc/: __init__.py  cmd_auth.py  owo.py  template.py
src/cogs/prompt_inspector/: __init__.py  auto.py  common.py  prompt_inspector.py  settings.py  stealth.py  temp.py  ui.py
src/cogs/snaketalk/: __init__.py  settings.py  snaketalk.py
src/exceptions/: __init__.py
src/owomatic/: __init__.py  bot.py  cli.py  dataclasses.py  embeds.py  settings.py
src/owomatic/helpers/: checks.py  deowo.py  json_manager.py  misc.py  systemd.py
src/owomatic/settings/: __init__.py  discord.py  settings.py
