[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]

[tool.setuptools_scm]
write_to = "src/owomatic/_version.py"


[tool.black]
line-length = 110
target-version = ['py310']


[tool.ruff]
line-length = 110
target-version = 'py310'

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
  "F841", # variable assigned but unused
  "E501", # line too long (let black handle that for now)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = [
  "cogs",
  "exceptions",
  "logsnake",
  "owomatic",
]
known-third-party = ["disnake"]
