[metadata]
name = owomatic
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    owomatic
    cogs
    helpers
    exceptions
include_package_data = True
install_requires =
    click >= 8.1.3, < 8.2.0
    colorama >= 0.4.5, < 0.5.0
    daemonocle == 1.2.3
    dataclasses-json >= 0.5.7, < 0.6.0
    disnake >= 2.8.0, < 2.9.0
    humanize == 4.2.1
    pydantic >= 1.10.2
    rich >= 12.6.0
    uvloop == 0.17.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1
    setuptools-scm >= 7.0.5
    mypy >= 0.981

[options.entry_points]
console_scripts =
    owomatic = owomatic.cli:cli

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv

[mypy]
plugins = disnake.ext.mypy_plugin
