[metadata]
name = owomatic
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    owomatic
    cogs
    helpers
    exceptions
include_package_data = True
install_requires =
    async_lru >=2.0.2, <2.1.0
    click >=8.1.3, <8.2.0
    colorama >=0.4.5, <0.5.0
    daemonocle == 1.2.3
    dataclasses-json >=0.5.7, <0.6.0
    disnake >=2.9.0, <2.10.0
    humanize == 4.2.1
    pillow >=9.5.0, <10.0.0
    pydantic >=1.10.2, <2.0.0
    pynacl >= 1.5.0, <2.0.0
    rich >=12.6.0
    uvloop ==0.17.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >=22.3.0
    setuptools-scm >=7.0.5
    ruff >=0.1.0, <1.0.0

[options.entry_points]
console_scripts =
    owomatic = owomatic.cli:cli
